--- a/week6/package.json
+++ b/week6/package.json
@@ -1,5 +1,6 @@
 {
   "name": "week6",
+  "homepage": "https://kouyouTakeda.github.io/2023CG/week6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "vite": "^4.3.2"
   },
   "dependencies": {
