--- a/week6/package.json
+++ b/week6/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "firebase-tools": "^12.2.1",
     "gh-pages": "^5.0.0",
     "vite": "^4.3.2"
   },
